# OxideNote

./: .gitignore  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
scripts/: generate-third-party-notices.cjs  project-stats.cjs
src/: App.tsx  THIRD_PARTY_NOTICES.md  i18n.ts  styles.css
src-tauri/: Cargo.toml  THIRD_PARTY_NOTICES.md  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/agent/: commands.rs  context.rs  custom.rs  history.rs  mod.rs  runtime.rs  scheduler.rs  tools.rs  types.rs
src-tauri/src/commands/: attachment.rs  bookmark.rs  browser.rs  canvas.rs  chat.rs  chat_db.rs  clip.rs  crypto.rs  embedding.rs  export.rs  health.rs  history.rs  import.rs  inline_ai.rs  mod.rs  note.rs  search.rs  stats.rs  trash.rs  typst.rs  util.rs  vault.rs
src-tauri/src/indexing/: db.rs  embeddings.rs  fts.rs  mod.rs  parser.rs  scanner.rs
src-tauri/src/llm/: client.rs  function_calling.rs  mod.rs  types.rs
src-tauri/src/watcher/: handler.rs  mod.rs
src/components/: ErrorBoundary.tsx
src/components/agent/: AgentPanel.tsx
src/components/browser/: BrowserPanel.tsx
src/components/canvas/: CanvasEditor.tsx
src/components/chat/: AiMemoryPanel.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  ContextBudgetBar.tsx  EditCard.tsx  MessageList.tsx  ModelSelector.tsx  StreamingMessage.tsx  TokenCounter.tsx
src/components/database/: CalendarView.tsx  DatabaseToolbar.tsx  DatabaseView.tsx  GalleryView.tsx  KanbanView.tsx  RowDetailDialog.tsx  TableView.tsx  TimelineView.tsx
src/components/editor/: AudioRecorder.tsx  BacklinksPanel.tsx  Breadcrumb.tsx  ConflictDialog.tsx  DashboardPanel.tsx  DiagramEditor.tsx  DiffView.tsx  EditorToolbar.tsx  HistoryPanel.tsx  ImageLightbox.tsx  LaTeXPreview.tsx  MarkdownPreview.tsx  NoteEditor.tsx  OutlinePanel.tsx  PropertiesPanel.tsx  SelectionToolbar.tsx  SmartLinkSuggestion.tsx  StatusBar.tsx  TabBar.tsx  TagPanel.tsx  TagSuggestion.tsx  TaskPanel.tsx  TypstPreview.tsx  scrollSync.ts
src/components/flashcard/: FlashcardView.tsx
src/components/graph/: CardFlowView.tsx  GraphView.tsx
src/components/layout/: ActivityBar.tsx  AppShell.tsx  SidebarContent.tsx  WelcomeScreen.tsx
src/components/pdf/: PDFViewer.tsx
src/components/presentation/: PresentationView.tsx
src/components/search/: CommandPalette.tsx  GlobalSearch.tsx  QuickOpen.tsx
src/components/settings/: SettingsDialog.tsx  VaultHealthDialog.tsx
src/components/tree/: AiResultDialog.tsx  BookmarkList.tsx  TrashView.tsx  VaultTree.tsx
src/components/typesetting/: TypesettingDialog.tsx
src/components/ui/: FontSizeHUD.tsx  PasswordDialog.tsx  button.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  (+10 more)
src/hooks/: useToast.ts
src/lib/: api.ts  commandRegistry.ts  database.ts  editorViewRef.ts  exportDocx.ts  exportHtml.ts  exportPdf.ts  flashcard.ts  formatAdapter.ts  pdfAnnotations.ts  previewCache.ts  publishSite.ts  speechRecognition.ts  utils.ts  validateFilename.ts
src/store/: agentStore.ts  chatStore.ts  noteStore.ts  searchStore.ts  settingsStore.ts  uiStore.ts  workspaceStore.ts
(+11 files in other folders)
