[package]
name = "oxidenote"
version = "0.1.0"
description = "A local-first markdown note app built with Rust and Tauri"
authors = ["OxideNote Team"]
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
edition = "2021"

[lib]
name = "oxidenote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.2.2"
tauri-plugin-opener = "2.2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mimalloc = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
