[package]
name = "oxidenote"
version = "0.1.0"
description = "A local-first markdown note app built with Rust and Tauri"
authors = ["OxideNote Team"]
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
edition = "2021"

[lib]
name = "oxidenote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.2.2"
tauri-plugin-opener = "2.2.6"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mimalloc = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "sync"] }
parking_lot = "0.12"
chrono = "0.4"
notify = "7"
notify-debouncer-mini = "0.5"
rusqlite = { version = "0.34", features = ["bundled"] }
walkdir = "2"
serde_yaml = "0.9"
regex = "1"
trash = "5"
sha2 = "0.10"
base64 = "0.22"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
htmd = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
similar = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
